kubernetes/mysql-statefull.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  ports:
  - name: mysql
    port: 3306
  selector:
    app: mysql
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-read
  labels:
    app: mysql
    readonly: "true"
spec:
  ports:
  - name: mysql
    port: 3306
  selector:
    app: mysql
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
spec:
  serviceName: mysql
  replicas: 2
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:8.0.39
        ports:
        - name: mysql-port
          containerPort: 3306
        lifecycle:
          postStart:
            exec:
              command:
              - bash
              - "-c"
              - |
                set -ex
                [[ $HOSTNAME =~ -([0-9]+)$ ]] || exit 1
                ordinal=${BASH_REMATCH[1]}
                echo [mysqld] > /etc/mysql/conf.d/mysqld.cnf
                if [[ $ordinal -eq 0 ]]; then
                  echo log-bin >> /etc/mysql/conf.d/mysqld.cnf
                else
                  echo super-read-only >> /etc/mysql/conf.d/mysqld.cnf
                fi
                echo server-id=$((1 + $ordinal)) >> /etc/mysql/conf.d/mysqld.cnf
        # readinessProbe:
        startupProbe:
          exec:
            command:
            - bash
            - "-c"
            - |
              [...]
          initialDelaySeconds: 10
          # periodSeconds: 2
          timeoutSeconds: 300
        volumeMounts:
        - name: mysql-pvc
          mountPath: /var/lib/mysql
        - name: mysql-config
          mountPath: /tmp/config-map
      volumes:
      # - name: mysql-data
      #   persistentVolumeClaim:
      #     claimName: mysql-pvc
      - name: mysql-config
        configMap:
          name: mysql-configmap
  volumeClaimTemplates:
  - metadata:
      name: mysql-pvc
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
      # storageClassName: manual
      # selector:
      #   matchLabels:
      #     type: local
---
